[gd_scene load_steps=2 format=3 uid="uid://1mt36r6kfk52"]

[ext_resource type="Script" path="res://UI/Chat/Chat.gd" id="1_mc8gr"]

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_mc8gr")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatLabel" type="Label" parent="Panel2/VBoxContainer"]
layout_mode = 2
text = "Chat"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Panel2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel2/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AllMessagesBox" type="RichTextLabel" parent="Panel2/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
text = "This is some text"
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2/VBoxContainer"]
layout_mode = 2

[node name="SendMessageBox" type="LineEdit" parent="Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[connection signal="text_submitted" from="Panel2/VBoxContainer/HBoxContainer/SendMessageBox" to="." method="_on_send_message_box_text_submitted"]
[connection signal="pressed" from="Panel2/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
